<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alertDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/white_secondary"
        android:textAlignment="center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertTitle" />

    <TextView
        android:id="@+id/alertInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_password_label"
        android:textColor="@color/white_secondary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/alertButtonPositive"
        app:layout_constraintTop_toBottomOf="@+id/alertDescription"
        app:layout_constraintBottom_toTopOf="@+id/alertInput" />

    <EditText
        android:id="@+id/alertInput"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/alertButtonPositive"
        app:layout_constraintStart_toStartOf="@+id/alertButtonPositive"
        app:layout_constraintTop_toBottomOf="@+id/alertInputLabel"
        app:layout_constraintBottom_toTopOf="@+id/alertInputTwoLabel" />

    <TextView
        android:id="@+id/alertInputTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_new_password_label"
        android:textColor="@color/white_secondary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/alertButtonPositive"
        app:layout_constraintTop_toBottomOf="@+id/alertInput"
        app:layout_constraintBottom_toTopOf="@+id/alertInputTwo" />

    <EditText
        android:id="@+id/alertInputTwo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/alertButtonPositive"
        app:layout_constraintStart_toStartOf="@+id/alertButtonPositive"
        app:layout_constraintTop_toBottomOf="@+id/alertInputTwoLabel"
        app:layout_constraintBottom_toTopOf="@+id/alertButtonPositive" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alertButtonPositive"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background_blue"
        android:clipToPadding="false"
        android:elevation="10dp"
        android:text="@string/button_confirm"
        android:textAllCaps="false"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/alertButtonNegative"
        app:layout_constraintTop_toBottomOf="@+id/alertInputTwo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/alertButtonNegative"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:elevation="10dp"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertButtonPositive"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>